RESOLVED FIXED101292
Fix RenderGeometryMap assertion when layers are scrolled during layout
https://bugs.webkit.org/show_bug.cgi?id=101292
Summary Fix RenderGeometryMap assertion when layers are scrolled during layout
Simon Fraser (smfr)
Reported 2012-11-05 18:57:13 PST
Fix RenderGeometryMap assertion when layers are scrolled during layout
Attachments
Patch (5.63 KB, patch)
2012-11-05 19:01 PST, Simon Fraser (smfr)
bdakin: review+
Simon Fraser (smfr)
Comment 1 2012-11-05 19:01:02 PST
Simon Fraser (smfr)
Comment 2 2012-11-06 10:02:42 PST
Note You need to log in before you can comment on or make changes to this bug.